Overflow page fixed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,7 +23,7 @@
 
 html {
   scroll-behavior: smooth;
-  overflow-x: hidden
+  overflow-x: hidden;
 }
 
 @layer base {
